<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="48dp"
    android:background="@drawable/background_button">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/about_project"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/price"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="serif"
        android:text="@string/about_school"/>

    <TextView
        android:id="@+id/repo_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/repo_link" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/slogan"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/indigo_500"
        android:textSize="20sp" />

</LinearLayout>