<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:onClick="showItemDescription2"
    android:background="@color/dirtyWhite">


    <ImageView
        android:id="@+id/list_item_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/item_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_list_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_photo" />

    <RelativeLayout
        android:id="@+id/item_list_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="32dp"
        android:layout_toEndOf="@id/list_item_photo"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/list_item_photo"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/list_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:fontFamily="serif"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/list_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_name"
            android:text="@string/item_price"
            android:fontFamily="serif"
            android:textColor="@color/price"
            android:textSize="16sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
