<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_button">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="0dp"
                android:alpha="0.2"
                android:scaleType="center"
                android:src="@drawable/tb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="Fragments.SearchFragment"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:textColor="@android:color/primary_text_dark_nodisable"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:text="@string/search_string" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/search_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="16sp"
                        android:fontFamily="serif"
                        android:background="@drawable/style_2"
                        android:hint="@string/name_of_item"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <EditText
                            android:id="@+id/search_minprice"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:layout_marginRight="20dp"
                            android:inputType="number"
                            android:fontFamily="serif"
                            android:background="@drawable/style_2"
                            android:hint="@string/search_minprice"/>

                        <EditText
                            android:id="@+id/search_maxprice"
                            android:layout_width="200dp"
                            android:layout_height="50dp"
                            android:textSize="16sp"
                            android:inputType="number"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:layout_marginBottom="20dp"
                            android:layout_toRightOf="@id/search_minprice"
                            android:background="@drawable/style_2"
                            android:hint="@string/search_maxprice"/>
                    </LinearLayout>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardMaxElevation="5dp"
                        android:layout_marginBottom="20dp"
                        >

                        <Spinner
                            android:id="@+id/search_category"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:gravity="center_horizontal"
                            android:paddingBottom="5dp"
                            android:textSize="16sp"
                            android:paddingTop="5dp"
                            android:fontFamily="serif"
                            android:textColor="@color/black"
                            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                            android:text="@string/search_choose_categories"
                            android:entries="@array/search_loading"/>
                    </android.support.v7.widget.CardView>


                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardMaxElevation="5dp">


                        <Spinner
                            android:id="@+id/search_subCategory"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:fontFamily="serif"
                            android:gravity="center_horizontal"

                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textColor="@color/black"
                            android:theme="@android:style/Theme.Holo.Light.DarkActionBar"
                            android:text="@string/search_choose_subCategories"
                            android:entries="@array/search_chooseCategory"/>

                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <Button
                    android:id="@+id/search_submit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="322dp"
                    android:background="@color/black"
                    android:text="@string/action_search"
                    android:fontFamily="serif"
                    android:textColor="@color/white"/>


            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>