<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dirtyWhite"
        android:orientation="vertical">

        <Views.ItemImageView
            android:id="@+id/item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/item_photo"
            android:src="@drawable/default_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/item_name_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_photo">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="serif"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:text="@string/item_price"
                android:fontFamily="serif"
                android:textColor="@color/price"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!--<ToggleButton-->
            <!--android:id="@+id/favorite"-->
            <!--style="?android:attr/borderlessButtonStyle"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:textOff=""-->
            <!--android:textOn=""-->
            <!--app:layout_constraintBottom_toTopOf="@id/divider_top"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/item_photo" />-->

        <View
            android:id="@+id/divider_top"
            style="@style/divider"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_name_price" />

        <RelativeLayout
            android:id="@+id/seller_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_top">

            <TextView
                android:id="@+id/contact_seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_seller"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/contact_seller"
                android:layout_marginTop="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/seller_photo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/default_photo" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/seller_photo"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="66dp">

                    <TextView
                        android:id="@+id/seller_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seller_name"
                        android:fontFamily="serif"
                        android:textSize="15sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/seller_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/seller_name"
                        android:text="@string/seller_email"
                        android:fontFamily="serif"
                        android:textSize="14sp" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:id="@+id/divider_bottom"
            style="@style/divider"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/item_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seller_info" />

        <RelativeLayout
            android:id="@+id/item_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_bottom">

            <TextView
                android:id="@+id/additional_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="serif"
                android:text="@string/additional_info"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp" />

            <Views.ExpandableTextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/additional_info"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:layout_marginTop="25dp"
                android:paddingLeft="16dp"
                android:paddingTop="12dp"
                android:paddingRight="16dp"
                android:paddingBottom="12dp"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                android:fontFamily="serif"
                android:text="@string/item_desc" />
        </RelativeLayout>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:textAllCaps="true"
            android:padding="5dp"
            android:text="Delete Posting"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@android:color/holo_red_dark"
            app:layout_constraintBottom_toTopOf="@+id/divider_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.891"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_photo"
            app:layout_constraintVertical_bias="0.705" />

        <TextView
            android:id="@+id/boughtStatus"
            android:layout_width="124dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/indigo_500"
            android:fontFamily="serif"
            android:text="Item Status:"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.674"
            app:layout_constraintStart_toEndOf="@+id/seller_info"
            app:layout_constraintTop_toBottomOf="@+id/divider_top" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>